# ctgov-drug-ner

./: README.md  pyproject.toml
data/: brief_summaries.csv  brief_summaries.training.csv  gpt_predictions.csv  gpt_predictions.training.csv  ground_truth.csv  input_nct_ids.txt  t5_predictions.csv
drug_ner/: app.py  config.json  create_training_dataset.py  ctgov_crawler.py  drugs.py  eval_utils.py  file_utils.py  openai_ner.py  sqlutils.py  t5_inference.py  train_t5.py
